@@ -1,5 +1,6 @@
 
 === (next) ===
+SECURITY: fixed ignored "elemtype" of map, if "fields" is not set
 FIXED: to allow "null" as value of "any" typed field in "map"
 
 === 1.5.1 (2017-09-03) ===
